# find_double

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Duplicate_finder.cpp  Duplicate_finder.hpp  File_compare.cpp  File_compare.hpp  main.cpp
tests/: CMakeLists.txt  File_compare_test.cpp
